--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,14 +1,11 @@
 jar {
     baseName = 'common'
     version = '1.0.0-SNAPSHOT'
+    enabled = true
 }
 
 bootJar {
     enabled = false
-}
-
-jar {
-    enabled = true
 }
 
 dependencies {
@@ -17,15 +14,15 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-web-services'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly("mysql:mysql-connector-java")
+    compile 'org.springframework.boot:spring-boot-starter-aop'
+    compile 'org.springframework.boot:spring-boot-devtools' // class modified reload
+
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+
+    runtimeOnly 'mysql:mysql-connector-java'
     implementation 'org.projectlombok:lombok'
-    annotationProcessor("org.projectlombok:lombok")
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
-
-    compile("org.springframework.boot:spring-boot-starter-aop")
-    compile("org.springframework.boot:spring-boot-devtools")
-
     compile group: 'com.querydsl', name: 'querydsl-jpa'
     compile group: 'com.querydsl', name: 'querydsl-apt'
 }
@@ -56,9 +53,9 @@ sourceSets {
     }
 }
 
-eclipse {
-    classpath {
-        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7'
-    }
-}
+//eclipse {
+//    classpath {
+//        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+//        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7'
+//    }
+//}
